# fun

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/: README.md
include/IR/: block.hpp  instruction.hpp  label.hpp  lambda.hpp  local.hpp  operand.hpp  scalar.hpp  type.hpp  value.hpp
include/codegen/: to_llvm.hpp
include/config/: config.hpp  config.hpp.in
include/env/: context.hpp
include/scan/: parse.hpp
source/: CMakeLists.txt  main.cpp
source/codegen/: to_llvm.cpp
source/scan/: parse.cpp
test/: CMakeLists.txt  test_main.cpp
test/IR/: block_tests.hpp  instruction_tests.hpp  operand_tests.hpp  scalar_tests.hpp  value_tests.hpp
